# save-it

./: .gitignore  Procfile  README.md  appspec.yml  heroku.yml  package.json
.github/workflows/: ci.yml  rust.yml
api/: Cargo.toml
api/src/: main.rs  server.rs
api/src/controllers/: bookmarks.rs  feed.rs  healthcheck.rs  mod.rs  unfurl.rs  user.rs
api/src/errors/: user.rs
api/src/helpers/: jwt.rs  metadata_parser.rs  mocks.rs  mod.rs  password_reset.rs
api/src/middlewares/: auth.rs
api/src/services/: bookmarks.rs  email.rs  mod.rs  user.rs  users.rs
api/src/types/: mod.rs
app/: package.json
app/public/: index.html
app/src/: index.css  index.tsx
app/src/components/: HighlightedText.tsx  LoadingButton.tsx  PasswordInput.tsx  ProtectedRoute.tsx  index.ts
app/src/const/: index.ts  routes.ts  systemNavItems.ts
app/src/hooks/: index.ts  useAuth.ts  useCurrentUser.ts
app/src/i18n/: i18n.ts
app/src/pages/: App.tsx
app/src/store/: bookmarks.ts  navigation.ts  settings.ts  store.ts  user.ts
app/src/themes/: base.ts  dark.ts  index.ts
app/src/transport/: backOff.ts  bookmarks.ts  errors.ts  feed.ts  fetch.ts  index.ts  unfurl.ts  user.ts
e2e/: cypress.json  package.json
scripts/: install  start
src/: index.tsx  main.rs  server.rs
src/app/: App.tsx
src/const/: routes.ts
src/helpers/: jwt.rs
src/hooks/: useAuth.ts
src/loaders/: mongo.rs
src/services/: user.rs
src/store/: store.ts  user.ts
src/themes/: base.ts
src/transport/: feed.ts  fetch.ts  index.ts  user.ts
src/types/: index.ts  user.ts
src/utils/: storage.ts
(+77 files in other folders)
