[package]
name = "save-it-api-v2"
version = "0.1.0"
authors = ["Arnaldo Stanzani <nstanzani04@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
mongodb="1"
dotenv="0.15.0"
serde = "1.0.125"
serde_json="1"
actix-service="1.0.6"
futures="0.3.13"
jwt="0.13.0"
hmac="0.10.1"
sha2="0.9.3"
bcrypt="0.9.0"
actix-cors="0.5.4"
time="0.2.26"
actix-rt="1.1.1"
